changement de titre

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>title</title>
+  <title>Nouveau titre</title>
 </head>
 <body>
-
+  <h1>
+    Hello!
+  </h1>
 </body>
 </html>
